Fix date overflow issue

--- a/src/pages/explore/Explore.scss
+++ b/src/pages/explore/Explore.scss
@@ -67,3 +67,10 @@ ul.ba {
   flex-shrink: 0;
   margin-top: 0rem;
 }
+
+.card-start-time {
+  display: block;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
